--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -30,12 +30,12 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.4.2-solc-0.7",
+    "@openzeppelin/contracts": "^3.4.2",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.4",
     "base64-sol": "^1.0.1",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "ethers": "^6.14.1"
   }
 }
